--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "concurrently": "^6.3.0",
     "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "navi": "^0.14.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-navi": "^0.14.4",
     "react-request-hook": "^2.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
